# offline_model_proto

./: .gitignore  README.md  ort-cpu.txt  ort-gpu-blackwell.txt  ort-gpu-pascal.txt  requirements-onnx-blackwell.txt  requirements-onnx-pascal.txt  requirements-pytorch-blackwell.txt  requirements-pytorch-pascal.txt  requirements.in  requirements.txt  sample_config.yaml  tmp  torch-blackwell.txt  torch-pascal.txt
docs/: AIRGAP_INSTALL.md  LINUX_WHEELHOUSE_BUILD.md  MODEL_WEIGHTS.md
scripts/: build_offline_bundle.sh  compare_runs.py  inspect_environment.py  inspect_onnx.py  run_onnx_pipeline.py  run_pytorch_pipeline.py  run_rfdetr_image.py  run_video_frames.py  smoke_test_cv.py  smoke_test_python.py  smoke_test_torch.py
scripts/rfdetr-cpp/: CMakeLists.txt  README.md  main.cpp  stream.cpp
scripts/rfdetr-cpp-trt/: CMakeLists.txt  main.cpp
scripts/rfdetr-onnx-convert/: convert.py  requirements.txt
scripts/rfdetr-onnx-run/: run.py
scripts/rfdetr-pytorch/: requirements.txt  run.py
scripts/rtdetr-cpp/: CMakeLists.txt  main.cpp  stream.cpp
scripts/rtdetr-cpp-trt/: CMakeLists.txt  main.cpp
scripts/rtdetr-onnx-convert/: convert.py  requirements.txt
scripts/rtdetr-onnx-run/: requirements.txt  run.py
scripts/rtdetr-pytorch/: run.py
scripts/sam2-cpp/: CMakeLists.txt  README.md  main.cpp  stream.cpp
scripts/sam2-cpp-trt/: CMakeLists.txt  main.cpp
scripts/sam2-onnx-convert/: convert.py  requirements.txt
scripts/sam2-onnx-run/: requirements.txt  run.py
scripts/sam2-pytorch/: requirements.txt  run.py
scripts/sam3-pytorch/: requirements.txt  run.py
tools/: export_rfdetr_onnx.py  requirements_export.txt
